updated orm tables names
